--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -13,7 +13,7 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: Build the Docker image
-      run: docker -t xximjasonxx/fileupload:v${{ github.events.inputs.version }} build .
+      run: docker build -t xximjasonxx/fileupload:v${{ github.events.inputs.version }} .
       
     - name: Publish Docker Image
       run: |
