--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -9,13 +9,14 @@ on:
 
 jobs:
   build:
+    name: Create Image
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
     - name: Build the Docker image
-      run: docker build -t xximjasonxx/fileupload:v${{ github.events.inputs.version }} .
+      run: docker build -t xximjasonxx/fileupload:v${{ github.event.inputs.version }} .
       
     - name: Publish Docker Image
       run: |
         docker login --username ${{ secrets.DOCKER_HUB_USERNAME }} --password ${{ secrets.DOCKER_HUB_PASSWORD }}
-        docker push xximjasonxx/fileupload:v${{ github.events.inputs.version }}
+        docker push xximjasonxx/fileupload:v${{ github.event.inputs.version }}
